[package]
name = "ipfstools"
version = "0.1.0"
authors = ["filesys Inc <hello@filesys.com>"]
edition = "2018"

[dependencies]
byteorder = "*"
cbor = { git = "https://github.com/dvc94ch/rust-cbor", branch = "read-data-item" }
cid = { git = "https://github.com/multiformats/rust-cid", branch = "master" }
storage = { path = "../runtime/storage" }
domain = "*"
env_logger = "*"
failure = "*"
fnv = "*"
futures-preview = { version = "=0.3.0-alpha.13", features = ["compat"] }
libp2p = { version = "*", git = "https://github.com/libp2p/rust-libp2p", rev = "5655624" }
log = "*"
multibase = "*"
multihash = "*"
parity-multiaddr = { version = "*", git = "https://github.com/libp2p/rust-libp2p", rev = "5655624" }
parity-multihash = { version = "*", git = "https://github.com/libp2p/rust-libp2p", rev = "5655624" }
protobuf = "2.0.2"
rand = "0.6"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.1.16", features = ["async-await-preview"]  }
xdg = "*"