[package]
name = "client"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
log = "0.4"
parking_lot = "0.7.1"
env_logger = "0.6.0"
multihash = "~0.8.0"

beacon = { path = "../beacon" }
chain = { path = "../../chain/chain" }
node-runtime = { path = "../../runtime/runtime" }
primitives = { path = "../../runtime/primitives" }
shard = { path = "../shard" }
storage = { path = "../../runtime/storage" }
configs = { path = "../../chain/configs" }
cid = {path = "../../runtime/cid"}

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
bencher = "0.1.5"
rand = "0.6"
rand_xorshift = "0.1"
testlib = { path = "../../test-utils/testlib" }

[[bench]]
name = "client_bench"
harness = false
