[package]
name = "storage"
version = "0.1.0"
authors = ["puzzle<puzzle@puzzle.org>"]
edition = "2018"

[dependencies]
bincode = "1.0.0"
byteorder = "1.2"
elastic-array = { version = "0.10" }
kvdb = "0.1"
kvdb-memorydb = "0.1"
kvdb-rocksdb = "0.1.3"
log = "0.4"
parity-rocksdb = "0.5"
parking_lot = "0.7.1"
serde = "1.0"
serde_derive = "1.0"

primitives = { path = "../primitives" }


[dev-dependencies]
hex-literal = "0.1.1"
bencher = "0.1.5"
rand = "0.6"

[features]
test-utils = []

