[package]
name = "ipfs"
version = "0.1.0"
authors = ["FileSys Inc <hello@FileSys.com>"]
readme = "README.md"
license = "MIT"

[dependencies]
fnv = "*"
domain = "*"
failure = "*"
rand = "0.6"
env_logger = "*"
byteorder = "*"
protobuf = "2.0.2"
cid = { git = "https://github.com/multiformats/rust-cid", branch = "master" }
cbor = { git = "https://github.com/dvc94ch/rust-cbor", branch = "read-data-item" }
