[package]
name = "ipfstools"
version = "0.1.0"
authors = ["luomijie <zhiwei-luo@hotmail.com>"]
edition = "2018"

[dependencies]
fnv = "*"
domain = "*"
failure = "*"
rand = "0.6"
env_logger = "*"
byteorder = "*"
protobuf = "2.0.2"
cid = { git = "https://github.com/multiformats/rust-cid", branch = "master" }
cbor = { git = "https://github.com/dvc94ch/rust-cbor", branch = "read-data-item" }

