[package]
name = "state-viewer"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
hex = "0.3"

primitives = { path = "../../runtime/primitives" }
storage = { path = "../../runtime/storage" }
filesysmint = { path = "../../filesysmint" }
node-runtime = { path = "../../runtime/runtime" }
